@@ -36,6 +36,7 @@ Brazilian Portuguese (pt-BR) - Joomla! Brasil - FaBMak
 Bulgarian (bg-BG) - Bulgarian Translation Team - Trimud
 Catalan (ca-ES) - Catalan Translation Team - Damià Verger
 Chinese Traditional (zh-TW) - Traditional Chinese Translation Team - Eddy Chang
+Chinese Simplified (zh-CN) - Simplified Chinese Translation Team - Jonathan Chang
 Czech (cs-CZ) - Czech Translation Team
 Danish (da-DK) - Danish Translation Team - Ronny Buelund, Mikael Winther, Ole Bang Ottosen
 Dutch (nl-NL) - Dutch Translation Team - Marijke Stuivenberg, Martijn Maandag, Marco Corrò
