@@ -1,0 +1,209 @@
+; $Id: zh-CN.ini Jonathan Chang
+; Joomla! Project
+; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+JERROR_PARSING_LANGUAGE_FILE = "语言包文件 %1$s 读取错误:  %2$s 行发生错误"
+
+;Stepbar
+INSTL_STEPS_TITLE = "安装"
+INSTL_STEP_1_LABEL = "1 : 语言"
+INSTL_STEP_2_LABEL = "2 : 安装预检查"
+INSTL_STEP_3_LABEL = "3 : 许可"
+INSTL_STEP_4_LABEL = "4 : 数据库"
+INSTL_STEP_5_LABEL = "5 : FTP设置"
+INSTL_STEP_6_LABEL = "6 : 配置"
+INSTL_STEP_7_LABEL = "7 : 完成"
+
+;Language view
+INSTL_SELECT_LANGUAGE_TITLE="选择语言"
+INSTL_SELECT_LANGUAGE_DESC="请从以下列表中选择安全Joomla!过程中使用的语言:"
+INSTL_LANGUAGE_TITLE = "选择语言"
+INSTL_WARNJAVASCRIPT = "警告! 为了保证joomla!的正确安装, 您必须启用浏览器的javascript支持"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE = "安装预检查"
+INSTL_PRECHECK_FOR_VERSION = "安装预检查 %s:"
+INSTL_PRECHECK_DESC = "请修正列表中的一个标记为 (标记为 <strong class="_QQ_"red"_QQ_">否</strong>) 的服务器设置参数. 如果没有正确的配置可能会造成您的安装失败."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE = "推荐设置:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC = "为了保证joomla可以良好的运行，推荐如下php设置.<br />不过，即使你的设置和推荐的并不完全一样，Joomla! 也可以正常的工作."
+INSTL_PRECHECK_DIRECTIVE = "配置项"
+INSTL_PRECHECK_RECOMMENDED = "推荐设置"
+INSTL_PRECHECK_ACTUAL = "实际设置"
+
+; Database view
+INSTL_DATABASE = "数据库配置"
+INSTL_DATABASE_HOST_DESC = "该设置通常是 "localhost""
+INSTL_DATABASE_HOST_LABEL = "主机名"
+INSTL_DATABASE_NAME_DESC = "某些主机只允许每个网站拥有一个数据库名称，那么在这种情况下使用数据表前缀来区分 Joomla! 网站。"
+INSTL_DATABASE_NAME_LABEL = "数据库名"
+INSTL_DATABASE_OLD_PROCESS_DESC = "以前安装的joomla!在安装过程中将会被备份"
+INSTL_DATABASE_OLD_PROCESS_LABEL = "旧数据处理"
+INSTL_DATABASE_PASSWORD_DESC = "为网站安全起见，请为mysql用户设置密码"
+INSTL_DATABASE_PASSWORD_LABEL = "密码"
+INSTL_DATABASE_PREFIX_DESC = "为数据库选择一个前缀 理想的前缀是, 三四个字符长度, 仅包含字母并且以下划线结束. 不要使用 "bak_" 因为这用户备份数据库中的表."
+INSTL_DATABASE_PREFIX_LABEL = "表前缀"
+INSTL_DATABASE_TYPE_DESC = "这很可能是 "mysql""
+INSTL_DATABASE_TYPE_LABEL = "数据库类型"
+INSTL_DATABASE_USER_DESC = "例如 "_QQ_"root"_QQ_" 或者是服务器提供商给您的的数据库用户名"
+INSTL_DATABASE_USER_LABEL = "用户名"
+INSTL_DATABASE_TITLE = "连接设置"
+INSTL_DATABASE_DESC = "<p>配置joomla!在你的服务器上运行包含简单的四个步骤...</p><p>请填写要安装Joomla!的主机名（mysql服务器名） .</p><p>填写MYSQL数据库的用户名,密码和你想使用joomla的数据库名.</p><p>填写joomla!使用的表前缀. 选择如何处理上一次安装中产生的数据.</p>"
+
+;Filesystem view
+INSTL_AUTOFIND_FTP_PATH = "自动探测FTP路径"
+INSTL_FTP = "FTP 配置"
+INSTL_FTP_DESC="<p>在某些服务器上您需要提供FTP验证信息以完成安. 如果没有提供这些信些导致您的安装出现问题而不能完成, 请检查你的主机以确认这些信息是否为必须的. </p><p>基于安全原因, 您最好为Joomla!安装目录单独开设FTP帐号而不是让该帐号可以访问整个网站. 您的主机提供商可以帮助您完成这些.</p><p><b>注意:</b> 如果您在Windows系统上安装Joomla, FTP信息则 <strong>不是</strong> 必须的.</p>"
+INSTL_FTP_ENABLE_LABEL = "启用FTP层"
+INSTL_FTP_HOST_LABEL = "FTP 主机"
+INSTL_FTP_PASSWORD_LABEL = "FTP 密码"
+INSTL_FTP_PORT_LABEL = "FTP 端口"
+INSTL_FTP_ROOT_LABEL = "FTP 根路径"
+INSTL_FTP_SAVE_LABEL = "保存 FTP 密码"
+INSTL_FTP_TITLE = "FTP 配置 (<strong class="_QQ_"red"_QQ_">可选 - 大多数用户可以跳过这个步骤 - 点击下一步跳过</strong>)"
+INSTL_FTP_USER_LABEL = "FTP 用户名"
+INSTL_SITE_NAME_LABEL = "网站名称"
+INSTL_VERIFY_FTP_SETTINGS = "验证FTP配置"
+INSTL_FTP_SETTINGS_CORRECT = "配置正确"
+INSTL_FTP_USER_DESC = "警告! 建议这里不要填写，而是每次你传输文件时才手动填写你的 FTP 用户名。"
+INSTL_FTP_PASSWORD_DESC = "警告! 建议这里不要填写，而是每次你传输文件时才手动填写你的 FTP 密码。"
+
+;Site View
+INSTL_SITE = "主要配置"
+INSTL_ADMIN_EMAIL_LABEL = "您的邮箱"
+INSTL_ADMIN_PASSWORD_LABEL = "系统管理员密码"
+INSTL_ADMIN_PASSWORD2_LABEL = "确认系统管理员密码"
+INSTL_ADMIN_USER_LABEL = "系统管理员用户名"
+INSTL_SITE_NAME_TITLE = "网站名称"
+INSTL_SITE_META_ADVANCED_SETTINGS = "高级配置 - 选项"
+INSTL_SITE_NAME_DESC = "输入您的Joomla!网站的名字"
+INSTL_SITE_METADESC_LABEL = "Meta Description"
+INSTL_SITE_METADESC_TITLE_LABEL = "填写整个站点的描述，主要被搜索引擎使用.一般说来, 不超过20个字是最理想的."
+INSTL_SITE_METAKEYS_LABEL = "Meta Keywords"
+INSTL_SITE_METAKEYS_TITLE_LABEL = "填写描述你整个站点的关键字和短语. 用逗号分隔关键字，用单引号分组短语."
+INSTL_SITE_CONF_TITLE = "确认管理员邮箱和密码"
+INSTL_SITE_CONF_DESC = "填写您的邮箱地址. 这是站点超级管理员的邮箱.<br />输入一个密码，然后再次输入以防止出错. 你可以修改默认的用户名 <strong>admin</strong>. 这将是安装结束后，您登陆后台管理所需的用户名和密码.<br /> 如果你是在迁移网站你可以忽略这一部分. 系统会自动使用备份资料中的设定值。"
+INSTL_SITE_LOAD_SAMPLE_TITLE = "加载示例数据"
+INSTL_SITE_LOAD_SAMPLE_DESC1 = "<strong>重要!</strong>: 强烈推荐Joomla!用户安装默认的示例数据. 在进入下一个步骤<i>之前</i> 点击按钮来完成安装"
+INSTL_SITE_LOAD_SAMPLE_DESC2 = "关闭安装之前，你可以给站点的数据库填充数据，有以下三种实现方式:"
+INSTL_SITE_LOAD_SAMPLE_DESC3 = "<strong>1a. 默认的示例数据</strong>可以被加载数据库中. 要实现这一点, 请确保默认的英文(GB)示例数据显示在下拉菜单中，点击“安装示例数据”按钮即可。"
+INSTL_SITE_LOAD_SAMPLE_DESC4 = "<strong>1b. 自定义的示例数据</strong>可以被加载数据库中. 要做到这一点, 请在下载菜单中选择一个可用的示例数据，然后点击“安装示例数据”按钮即可。"
+INSTL_SITE_LOAD_SAMPLE_DESC8 = "<strong>3. 全新安装</strong>: 如果你想做一次全新安装, 输入站点的名字，系统管理员的用户名和密码。然后通过点击<em>下一步</em>进入到最后一步"
+INSTL_SITE_SAMPLE_LABEL = "示例数据设置"
+INSTL_SITE_INSTALL_SAMPLE_LABEL = "安装示例数据"
+INSTL_SITE_INSTALL_SAMPLE_DESC = "对于初学者强烈推荐安装示例数据。这将安装在joomla!安装包里的示例数据。"
+INSTL_SITE_SAMPLE_LOADED = "示例数据安装成功."
+INSTL_SAMPLE_DATA_SET = "默认的英文(GB)示例数据"
+
+;Complete view
+INSTL_COMPLETE = "完成"
+INSTL_COMPLETE_TITLE = "恭喜! Joomla! 已经安装成功."
+INSTL_COMPLETE_DESC1 = "点击网站按钮来浏览您的Joomla!网站，或者是点击”系统管理“按钮来进行管理登陆"
+INSTL_COMPLETE_DESC2 = "在joomla!的帮助站点, 你可以找到在joomla中安装你的母语语言包的简单而又详尽的向导。 你还会在列表中看到可下载的语言包的链接."
+INSTL_COMPLETE_DESC3 = "点击右侧的按钮，在新窗口中打开帮助站点."
+INSTL_COMPLETE_REMOVE_INSTALLATION = "请记住要彻底删除安装目录（INSTALLATION DIRECTORY）<br />在目录“installation”被删除之前，您无法进行下一步操作。这是 Joomla 的一项安全功能。"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS = "管理员登陆的详细资料"
+INSTL_COMPLETE_LANGUAGE_1 = "Joomla!使用了您的母语语言?"
+INSTL_COMPLETE_LANGUAGE_2 = "访问Joomla!帮助网站获取更多的信息和下载."
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT = "不能连接到数据库. 连接返回编码 %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP = "备份数据库的过程中发生了错误."
+INSTL_DATABASE_ERROR_CREATE = "创建数据库时发生了错误%s.<br />用户可能没有足够的权限来创建一个数据库. 在安装Joomla!之前，所需的数据库可能需要分别创建."
+INSTL_DATABASE_ERROR_DELETE = "删除数据库的时候发生了错误."
+INSTL_DATABASE_FIELD_VALUE_REMOVE = "删除"
+INSTL_DATABASE_FIELD_VALUE_BACKUP = "备份"
+INSTL_DATABASE_FIX_TOO_LONG = "MySQL的表前缀最大不能超过 15 个字符."
+INSTL_DATABASE_INVALID_DB_DETAILS = "提供的数据库资料不正确或不完整."
+INSTL_DATABASE_INVALID_MYSQL_VERSION = "您需要 MySQL 5.0.4 or 更好的版本，您的版本是: %s"
+INSTL_DATABASE_INVALID_TYPE = "请选择数据库类型"
+INSTL_DATABASE_NAME_TOO_LONG = "MySQL的数据库名字最大为64个字符"
+INSTL_DATABASE_PREFIX_INVALID_CHARS = "MySQL的表前缀必须是字母开头，后续的字符只能是字母数字或下划线。"
+INSTL_DATABASE_INVALID_NAME = "MySQL 5.1.6 之前的版本在名字中可能不包含句号或其他 "_QQ_"特殊"_QQ_" 字符。您的版本是: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES = "MySQL 数据库名或者表名不能以空格开头或结尾."
+INSTL_DATABASE_NAME_INVALID_CHAR = "没有MySQL的标识符可以包含一个NUL ASCII(0x00)码."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST = "文件 %s 不存在"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED = "您的浏览器没有启用 Cookies。禁用此功能时将无法完成安装。或者是, 服务器的 <strong>session保存路径（session.save_path）</strong>出现了问题. 如果您不知道如何处理这种情况，请联系您的主机提供商."
+INSTL_HEADER_ERROR = "错误"
+
+;Helpers
+INSTL_PAGE_TITLE = "Joomla! 网站安装程序"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB = "不能连接到数据库. 连接返回编号: %s"
+INSTL_STD_OFFLINE_MSG = "网站在维护中.<br /> 请稍候访问."
+
+;Filesystem model
+INSTL_FTP_INVALIDROOT = "指定的FTP目录不是joomla的安装目录"
+INSTL_FTP_NOCONNECT = "不能连接到FTP服务器"
+INSTL_FTP_NODELE = "FTP发送命令 "_QQ_"DELE"_QQ_" 失败."
+INSTL_FTP_NODIRECTORYLISTING = "无法获取FTP服务器上的目录列表."
+INSTL_FTP_NOLIST="发送FTP命令 "_QQ_"LIST"_QQ_" 失败."
+INSTL_FTP_NOLOGIN = "不能登录FTP服务器。"
+INSTL_FTP_NOMKD = "发送FTP命令 "_QQ_"MKD"_QQ_" 失败."
+INSTL_FTP_NONLST = "发送FTP命令 "_QQ_"NLST"_QQ_" 失败."
+INSTL_FTP_NOPWD = "发送FTP命令 "_QQ_"PWD"_QQ_" 失败."
+INSTL_FTP_NORETR = "发送FTP命令 "_QQ_"RETR"_QQ_" 失败."
+INSTL_FTP_NORMD = "发送FTP命令 "_QQ_"RMD"_QQ_" 失败."
+INSTL_FTP_NOROOT = "不能读取指定的FTP路径"
+INSTL_FTP_NOSTOR = "发送FTP命令 "_QQ_"STOR"_QQ_" 失败."
+INSTL_FTP_NOSYST = "发送FTP命令 "_QQ_"SYST"_QQ_" 失败."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER = "无法自动检测FTP根目录."
+
+;others
+INSTL_ADVANCED_SETTINGS = "高级设置"
+INSTL_BASIC_SETTINGS = "基础设置"
+INSTL_CONFPROBLEM = "您的配置文件或者路径是不可写的，或者创建配置文件的过程中发生了错误. 你需要手工上传如下代码. 复制这些代码到一个命名为'configuration.php'的新文件，并上传到网站的根目录底下."
+INSTL_DISPLAY_ERRORS = "错误显示："
+INSTL_ERROR_DB = "填充数据库时发生错误: %s"
+INSTL_FILE_UPLOADS = "文件上传"
+INSTL_GNU_GPL_LICENSE = "GNU通用公共许可证"
+INSTL_INSTALLATION = "安装"
+INSTL_LICENSE = "许可"
+INSTL_JSON_SUPPORT_AVAILABLE = "JSON 支持"
+INSTL_MAGIC_QUOTES_RUNTIME = "魔术引号"
+INSTL_MB_LANGUAGE_IS_DEFAULT = "MB Language is Default"
+INSTL_MB_STRING_OVERLOAD_OFF = "MB String Overload Off"
+INSTL_MYSQL_SUPPORT = "MySQL 支持"
+INSTL_NOTICEMBLANGNOTDEFAULT = "PHP mbstring 的当前设置不是 neutral。 您可以在网站根目录的 <code>.htaccess</code> 文件中加入 <strong>php_value mbstring.language neutral</strong> 来完成设置"
+INSTL_NOTICEMBSTRINGOVERLOAD = "PHP mbstring 函数超载已设置为启用。您可以在网站根目录的 <code>.htaccess</code> 文件中加入<strong>php_value mbstring.func_overload 0</strong> 来关闭它"
+INSTL_NOTICEYOUCANSTILLINSTALL = "<br />你可以继续安装过程，配置参数会在最后显示出来。你必须手动上传这些代码。请全部复制这些代码后保存为文本文件，并将该文件命名为“configuration.php”，然后上传到您网站的根目录下."
+INSTL_OUTPUT_BUFFERING = "Output Buffering"
+INSTL_PARSE_INI_FILE_AVAILABLE = "INI Parser 支持"
+INSTL_PHP_VERSION = "PHP 版本"
+INSTL_REGISTER_GLOBALS = "全局变量"
+INSTL_SAFE_MODE = "安全模式"
+INSTL_SESSION_AUTO_START = "Session 自动开启"
+INSTL_WRITABLE = "可写"
+INSTL_XML_SUPPORT = "XML 支持"
+INSTL_ZLIB_COMPRESSION_SUPPORT = "Zlib 压缩支持"
+
+;Global strings
+JADMINISTRATOR = "系统管理员"
+JADVANCED = "高级"
+JCHECK_AGAIN = "重新检查"
+JERROR = "错误"
+JGLOBAL_ISFREESOFTWARE = "%s 是免费的软件，在 <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU通用公共许可证</a>下发布"
+JINVALID_TOKEN = "最近的表单提交因含无效验证数据而被拒绝提交。请刷新页面，然后再试一次."
+JNEXT = "下页"
+JNO = "否"
+JOFF = "关"
+JON = "开"
+JPREVIOUS = "上页"
+JSITE = "网站"
+JUSERNAME = "用户名"
+JYES = "是"
+
+; Framework strings necessary when no lang pack is available
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="您必须填写表单项: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="无效的表单项: %s"
+
+;Necessary for errors
+ADMIN_EMAIL = "你的邮箱"
+ADMIN_PASSWORD = "系统管理员密码"
+ADMIN_PASSWORD2 = "确认系统管理员密码"
+SITE_NAME = "网站名称"
