@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
+<metafile
+	version="1.6"
+	client="installation">
+	<name>简体中文</name>
+	<version>1.6.0</version>
+	<creationDate>2011.1.11</creationDate>
+	<author>Jonathan Chang</author>
+	<copyright>Copyright (C) 2005-2011 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<description></description>
+	<files>
+		<filename>zh-CN.ini</filename>
+	</files>
+	<metadata>
+		<name>简体中文</name>
+		<tag>zh-CN</tag>
+		<rtl>0</rtl>
+	</metadata>
+	<params ></params>
+</metafile>
